Working on script for automating if/else logic

--- a/automatic_script_teleporting/generate_script.ipynb
+++ b/automatic_script_teleporting/generate_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "201ef0c8",
    "metadata": {},
    "outputs": [],
@@ -55,12 +55,40 @@
     "# Different from get_val because it prevents the game from reading it in as a normal input\n",
     "event_press = \"event_press\"\n",
     "\n",
+    "locations_per_catagory = [18, 9, 17, 20]\n",
     "wait_time = [100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 60,
+   "id": "8e427db5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpc_locations_by_type = [\n",
+    "    [\"Set Location:\\nCategory: UP/DOWN\\nLocation: Left/Right\"],\n",
+    "    [\"Facilities\",\n",
+    "    \"Centrico Plaza\", \"Gare de Lumiose\", \"Pokemon Research Lab\", \"Hotel Z\", \"Racine Construction\", \"Restaurant Le Nah\", \"Rust Syndicate Office\",\n",
+    "    \"Lumiose Sewers\", \"Quasartico Inc.\", \"Lysandre Cafe\", \"Lumiose Sewers\", \"Hotel Richissime\", \"Looker Bureau\", \"Lumiose Museum\",\n",
+    "    \"Restaurant Le Yeah\", \"Sushi High Roller\", \"Restaurant Le Wow\", \"Justice Dojo\"],\n",
+    "    [\"Pokemon Centers\",\n",
+    "    \"Vert Pokemon Center\", \"Bleu Pokemon Center\", \"Vernal Pokemon Center\", \"Magenta Pokemon Center\", \"Magenta Plaza Pokemon Center\", \"Rouge Pokemon Center\", \"Centrico Pokemon Center\",\n",
+    "    \"Jaune Pokemon Center\", \"Hibernal Pokemon Center\"],\n",
+    "    [\"Cafes\",\n",
+    "    \"Cafe Cyclone\", \"Cafe Classe\", \"Cafe Introversion\", \"Nouveau Cafe\", \"Cafe Woof\", \"Cafe Soleil\", \"Shutterbug Cafe\",\n",
+    "    \"Nouveau Cafe Truck No. 2\", \"Cafe Pokemon-Amie\", \"Cafe Rouleau\", \"Cafe Gallant\", \"Cafe Triste\", \"Nouveau Cafe Truck No. 3\", \"Cafe Ultimo\",\n",
+    "    \"Cafe Action\", \"Cafe Kizuna\", \"Cafe Bataille\"],\n",
+    "    [\"Wild Zones\",\n",
+    "    \"Wild Zone 1\", \"Wild Zone 2\", \"Wild Zone 3\", \"Wild Zone 4\", \"Wild Zone 5\", \"Wild Zone 6\", \"Wild Zone 7\",\n",
+    "    \"Wild Zone 8\", \"Wild Zone 9\", \"Wild Zone 10\", \"Wild Zone 11\", \"Wild Zone 12\", \"Wild Zone 13\", \"Wild Zone 14\",\n",
+    "    \"Wild Zone 15\", \"Wild Zone 16\", \"Wild Zone 17\", \"Wild Zone 18\", \"Wild Zone 19\", \"Wild Zone 20\"]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "0c7c15a5",
    "metadata": {},
    "outputs": [],
@@ -74,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 62,
    "id": "27af2463",
    "metadata": {},
    "outputs": [],
@@ -88,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 63,
    "id": "e6926539",
    "metadata": {},
    "outputs": [],
@@ -100,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 64,
    "id": "f4e3a90a",
    "metadata": {},
    "outputs": [],
@@ -111,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 65,
    "id": "056b8886",
    "metadata": {},
    "outputs": [],
@@ -123,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 66,
    "id": "ef3277ee",
    "metadata": {},
    "outputs": [],
@@ -141,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 67,
    "id": "256a132e",
    "metadata": {},
    "outputs": [],
@@ -166,18 +194,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "2ae071d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def combo_firstline(desired_name):\n",
-    "    file.write(f'combo {desired_name}' + r' {' + '\\n')"
+    "# Good for combos, if/elses, for, while\n",
+    "def function_firstline(desired_name, function = 'combo', parenthesis = ''):\n",
+    "    file.write(f'{function} {desired_name}' + r' {' + '\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 69,
    "id": "ff5a74dd",
    "metadata": {},
    "outputs": [],
@@ -188,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 70,
    "id": "c8355f08",
    "metadata": {},
    "outputs": [],
@@ -203,20 +232,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "c7f41a59",
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_to_menu():\n",
-    "    combo_firstline(\"map_to_menu\")\n",
+    "    function_firstline(\"map_to_menu\")\n",
     "    button_sequence([plus, yb, min])\n",
     "    end_combo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "9d1d24ee",
    "metadata": {},
    "outputs": [],
@@ -224,7 +253,7 @@
     "def menu_selection(category):\n",
     "    category_index = get_position(category, filter_categories)\n",
     "    category = string_to_variable(category)\n",
-    "    combo_firstline(f'{category}_map_to_menu')\n",
+    "    function_firstline(f'{category}_map_to_menu')\n",
     "    write_command(combo_run, [\"map_to_menu\"])\n",
     "    dpad_inputs = []\n",
     "    for i in range(category_index):\n",
@@ -236,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 73,
    "id": "7343ecba",
    "metadata": {},
    "outputs": [],
@@ -249,18 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "c99bff05",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def category_teleport_init(category):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 75,
    "id": "d8d7845f",
    "metadata": {},
    "outputs": [],
@@ -292,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "a58e8127",
    "metadata": {},
    "outputs": [],
@@ -300,7 +318,7 @@
     "def location_selection(name, category, coordinates):\n",
     "    category = string_to_variable(category)\n",
     "    variable_name = string_to_variable(name)\n",
-    "    combo_firstline(variable_name)\n",
+    "    function_firstline(f'fast_travel_{variable_name}')\n",
     "    write_command(\"combo_run\", [f'{category}_map_to_menu'])\n",
     "    button_presses = coordinates_to_dpad(coordinates)\n",
     "    button_sequence(button_presses)\n",
@@ -309,7 +327,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
+   "id": "c99bff05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_if_else(location_selection, functions):\n",
+    "    for i in range(len(location_selection)):\n",
+    "        for j in range(len(location_selection[i])):\n",
+    "            function_name = gpc_locations_by_type[i][j]\n",
+    "            function_name = string_to_variable(function_name)\n",
+    "            function_firstline(function_name, 'if', f'(category == 1)')\n",
+    "            \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "65b1aba1",
    "metadata": {},
    "outputs": [],
@@ -318,12 +353,13 @@
     "    create_reused_combos()\n",
     "    for location in locations[:3]:\n",
     "        coordinates, name, category  = shortest_path(location)\n",
-    "        location_selection(name, category, coordinates)"
+    "        location_selection(name, category, coordinates)\n",
+    "        write_command('if', f'category == 1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 78,
    "id": "e1a464e8",
    "metadata": {},
    "outputs": [
