--- a/automatic_script_teleporting/generate_script.ipynb
+++ b/automatic_script_teleporting/generate_script.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "201ef0c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "from last_stretch import shortest_path\n",
     "from shortest_path import filter_categories, get_position\n",
-    "\n",
+    "from init import init\n",
     "from locations import locations\n",
-    "\n",
+    "from if_else_branch import if_else_branch\n",
+    "from declare_variables import declare_variables\n",
     "import re\n",
     "file = open(\"auto_teleport_loop.gpc\", \"w\")\n",
     "dr = \"SWI_RIGHT\"\n",
@@ -28,6 +29,8 @@
     "zl = \"SWI_ZL\"\n",
     "rb = \"SWI_R\"\n",
     "lb = \"SWI_L\"\n",
+    "\n",
+    "tab = '\\t'\n",
     "\n",
     "# Arguments: controller input\n",
     "get_val = \"get_val\"\n",
@@ -61,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "id": "8e427db5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpc_locations_by_type = [\n",
+    "gpc_location_array_by_type = [\n",
     "    [\"Set Location:\\nCategory: UP/DOWN\\nLocation: Left/Right\"],\n",
     "    [\"Facilities\",\n",
     "    \"Centrico Plaza\", \"Gare de Lumiose\", \"Pokemon Research Lab\", \"Hotel Z\", \"Racine Construction\", \"Restaurant Le Nah\", \"Rust Syndicate Office\",\n",
-    "    \"Lumiose Sewers\", \"Quasartico Inc.\", \"Lysandre Cafe\", \"Lumiose Sewers\", \"Hotel Richissime\", \"Looker Bureau\", \"Lumiose Museum\",\n",
+    "    \"Lumiose Sewers (Main Access)\", \"Quasartico Inc.\", \"Lysandre Cafe\", \"Lumiose Sewers (Canal Access)\", \"Hotel Richissime\", \"Looker Bureau\", \"Lumiose Museum\",\n",
     "    \"Restaurant Le Yeah\", \"Sushi High Roller\", \"Restaurant Le Wow\", \"Justice Dojo\"],\n",
     "    [\"Pokemon Centers\",\n",
     "    \"Vert Pokemon Center\", \"Bleu Pokemon Center\", \"Vernal Pokemon Center\", \"Magenta Pokemon Center\", \"Magenta Plaza Pokemon Center\", \"Rouge Pokemon Center\", \"Centrico Pokemon Center\",\n",
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "id": "0c7c15a5",
    "metadata": {},
    "outputs": [],
@@ -102,21 +105,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "id": "27af2463",
    "metadata": {},
    "outputs": [],
    "source": [
     "def write_command(command_name, input_array, tab_num = 1):\n",
-    "    file.write(f'{'\\t' * tab_num}{command_name}(')\n",
+    "    file.write(f'{tab * tab_num + command_name}(')\n",
     "    for input in input_array[:-1]:\n",
     "        file.write(f'{input}, ')\n",
-    "    file.write(f'{input_array[-1]});\\n')"
+    "    file.write(f'{input_array[-1]});\\n')\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
+   "id": "2ae071d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Good for combos, if/elses, for, while\n",
+    "def function_firstline(function_name, function_type = 'combo', num_tabs = 0, num_spaces = 1):\n",
+    "    file.write(f'{tab*num_tabs}{function_type}{' '*num_spaces}{function_name}' + r' {' + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "ff5a74dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def end_combo(tab_num = 0):\n",
+    "    file.write(f'{tab * tab_num}' + '}\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "id": "e6926539",
    "metadata": {},
    "outputs": [],
@@ -128,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "id": "f4e3a90a",
    "metadata": {},
    "outputs": [],
@@ -139,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "id": "056b8886",
    "metadata": {},
    "outputs": [],
@@ -151,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "id": "ef3277ee",
    "metadata": {},
    "outputs": [],
@@ -169,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "id": "256a132e",
    "metadata": {},
    "outputs": [],
@@ -194,91 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2ae071d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Good for combos, if/elses, for, while\n",
-    "def function_firstline(desired_name, function = 'combo', parenthesis = ''):\n",
-    "    file.write(f'{function} {desired_name}' + r' {' + '\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "ff5a74dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def end_combo():\n",
-    "    file.write('}\\n\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "c8355f08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def write_combo(name, command_array, parameter_array_squared):\n",
-    "#     initialize_combo_firstline(name)\n",
-    "#     for i in range(len(command_array)):\n",
-    "        # cluster_commands(command_array[i], parameter_array_squared[i])\n",
-    "    #     button_sequence(parameter_array_squared[i])\n",
-    "    # end_combo()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7f41a59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def map_to_menu():\n",
-    "    function_firstline(\"map_to_menu\")\n",
-    "    button_sequence([plus, yb, min])\n",
-    "    end_combo()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d1d24ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def menu_selection(category):\n",
-    "    category_index = get_position(category, filter_categories)\n",
-    "    category = string_to_variable(category)\n",
-    "    function_firstline(f'{category}_map_to_menu')\n",
-    "    write_command(combo_run, [\"map_to_menu\"])\n",
-    "    dpad_inputs = []\n",
-    "    for i in range(category_index):\n",
-    "        dpad_inputs.append(dd)\n",
-    "    dpad_inputs.append(ab)\n",
-    "    button_sequence(dpad_inputs)\n",
-    "    end_combo()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "7343ecba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_reused_combos():\n",
-    "    map_to_menu()\n",
-    "    for category in filter_categories[:-1]:\n",
-    "        menu_selection(category)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 72,
    "id": "d8d7845f",
    "metadata": {},
    "outputs": [],
@@ -310,12 +253,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
+   "id": "c7f41a59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_to_menu():\n",
+    "    function_firstline(\"map_to_menu\")\n",
+    "    button_sequence([plus, yb, min])\n",
+    "    end_combo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "9d1d24ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def menu_selection(category):\n",
+    "    category_index = get_position(category, filter_categories)\n",
+    "    category = string_to_variable(category)\n",
+    "    function_firstline(f'{category}_map_to_menu')\n",
+    "    write_command(combo_run, [\"map_to_menu\"])\n",
+    "    dpad_inputs = []\n",
+    "    for i in range(category_index):\n",
+    "        dpad_inputs.append(dd)\n",
+    "    dpad_inputs.append(ab)\n",
+    "    button_sequence(dpad_inputs)\n",
+    "    end_combo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "7343ecba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_reused_combos():\n",
+    "    map_to_menu()\n",
+    "    for category in filter_categories[:-1]:\n",
+    "        menu_selection(category)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "id": "a58e8127",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def location_selection(name, category, coordinates):\n",
+    "def gpc_locations_by_type(name, category, coordinates):\n",
     "    category = string_to_variable(category)\n",
     "    variable_name = string_to_variable(name)\n",
     "    function_firstline(f'fast_travel_{variable_name}')\n",
@@ -327,64 +316,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "c99bff05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_if_else(location_selection, functions):\n",
-    "    for i in range(len(location_selection)):\n",
-    "        for j in range(len(location_selection[i])):\n",
-    "            function_name = gpc_locations_by_type[i][j]\n",
+    "def generate_if_else():\n",
+    "    i = 1\n",
+    "    while i in range(len(gpc_location_array_by_type)):\n",
+    "        num_tabs = 3\n",
+    "        function_firstline(f'(category == {i})', 'if', num_tabs)\n",
+    "        j = 1\n",
+    "        while j in range(len(gpc_location_array_by_type[i])):\n",
+    "            num_tabs = 4\n",
+    "            function_name = gpc_location_array_by_type[i][j]\n",
     "            function_name = string_to_variable(function_name)\n",
-    "            function_firstline(function_name, 'if', f'(category == 1)')\n",
-    "            \n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65b1aba1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def main():\n",
-    "    create_reused_combos()\n",
-    "    for location in locations[:3]:\n",
-    "        coordinates, name, category  = shortest_path(location)\n",
-    "        location_selection(name, category, coordinates)\n",
-    "        write_command('if', f'category == 1')"
+    "            function_firstline(f'(location == {j})', 'if', num_tabs, 0)\n",
+    "            num_tabs = 5\n",
+    "            write_command('combo_run', [f'fast_travel_{function_name}'], num_tabs)\n",
+    "            end_combo(4)\n",
+    "            j += 1\n",
+    "        end_combo(3)\n",
+    "        i += 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 78,
+   "id": "2b46947f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_main():\n",
+    "    function_firstline('main', '', num_spaces=0)\n",
+    "    file.write(if_else_branch)\n",
+    "    generate_if_else()\n",
+    "    end_combo(2)\n",
+    "    end_combo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "65b1aba1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    file.write(declare_variables)\n",
+    "    file.write(init)\n",
+    "    create_reused_combos()\n",
+    "    for location in locations[:]:\n",
+    "        coordinates, name, category  = shortest_path(location)\n",
+    "        gpc_locations_by_type(name, category, coordinates)\n",
+    "    generate_main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "id": "e1a464e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "***ABSOLUTE SHORTEST PATH FOR: CENTRICO PLAZA***\n",
-      "All Locations\n",
-      "Steps: 0\n",
-      "Coordinates: [0, 0]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: GARE DE LUMIOSE***\n",
-      "All Locations\n",
-      "Steps: 1\n",
-      "Coordinates: [0, 1]\n",
-      "\n",
-      "***ABSOLUTE SHORTEST PATH FOR: POKEMON RESEARCH LAB***\n",
-      "All Locations\n",
-      "Steps: 2\n",
-      "Coordinates: [0, 2]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "main()"
    ]
