Changed GPC script

--- a/automatic_script_teleporting/generate_script.ipynb
+++ b/automatic_script_teleporting/generate_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "id": "201ef0c8",
    "metadata": {},
    "outputs": [],
@@ -10,9 +10,9 @@
     "from last_stretch import shortest_path\n",
     "from shortest_path import filter_categories, get_position\n",
     "from init import init\n",
-    "from locations import locations\n",
+    "from locations import locations, categories\n",
     "from if_else_branch import if_else_branch\n",
-    "from declare_variables import declare_variables\n",
+    "from location_data import location_data\n",
     "import re\n",
     "file = open(\"auto_teleport_loop.gpc\", \"w\")\n",
     "dr = \"SWI_RIGHT\"\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "id": "8e427db5",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "id": "0c7c15a5",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "id": "27af2463",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 32,
    "id": "2ae071d8",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 33,
    "id": "ff5a74dd",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "id": "e6926539",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 35,
    "id": "f4e3a90a",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 36,
    "id": "056b8886",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 37,
    "id": "ef3277ee",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 38,
    "id": "256a132e",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 39,
    "id": "d8d7845f",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "id": "c7f41a59",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 41,
    "id": "9d1d24ee",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 42,
    "id": "7343ecba",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 43,
    "id": "a58e8127",
    "metadata": {},
    "outputs": [],
@@ -311,12 +311,13 @@
     "    write_command(\"combo_run\", [f'{category}_map_to_menu'])\n",
     "    button_presses = coordinates_to_dpad(coordinates)\n",
     "    button_sequence(button_presses)\n",
+    "    write_command(wait, [1000], 1)\n",
     "    end_combo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 44,
    "id": "c99bff05",
    "metadata": {},
    "outputs": [],
@@ -342,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 45,
    "id": "2b46947f",
    "metadata": {},
    "outputs": [],
@@ -352,34 +353,138 @@
     "    file.write(if_else_branch)\n",
     "    generate_if_else()\n",
     "    end_combo(2)\n",
+    "    end_combo(1)\n",
     "    end_combo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 46,
+   "id": "9ee1db02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_coordinate_data(array):\n",
+    "    file.write('const int coordinates[][] = ' + '{\\n')\n",
+    "    for item in array[:-1]:\n",
+    "        file.write('{'+ f'{item[0]}, {item[1]}' + '}, ')\n",
+    "    file.write( r'{'+ f'{array[-1][0]}, {array[-1][1]}' + r'}' + '\\n};\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b60c003d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_string_array_data(location_data):\n",
+    "    variable_names = [\"locations\", \"categories\"]\n",
+    "    i = 0\n",
+    "\n",
+    "    for array in location_data:\n",
+    "        file.write(f'const string {variable_names[i]}[][] = ' + '{\\n')\n",
+    "        for item in array[:-1]:\n",
+    "            file.write(r'\"'+ f'{item}' + r'\", ')\n",
+    "        file.write(r'\"' + f'{array[-1]}' + r'\"'+ \"\\n};\\n\\n\")\n",
+    "        i += 1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "9408a129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_location_data(location_data=location_data):\n",
+    "    string_arrays = location_data[:-1]\n",
+    "    coordinate_array = location_data[-1]\n",
+    "    insert_string_array_data(string_arrays)\n",
+    "    insert_coordinate_data(coordinate_array)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "3d2655e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def declare_variables():\n",
+    "    file.write('int SCRIPT_RUNNING = FALSE;\\n')\n",
+    "    file.write('int category = 0;\\n')\n",
+    "    file.write('int location = 0;\\n')\n",
+    "    file.write(\"const int locations_per_catagory[] = {18, 9, 17, 20};\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "a542e796",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def init_variables():\n",
+    "    declare_variables()\n",
+    "    insert_location_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "id": "65b1aba1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
-    "    file.write(declare_variables)\n",
+    "    init_variables()\n",
     "    file.write(init)\n",
-    "    create_reused_combos()\n",
-    "    for location in locations[:]:\n",
-    "        coordinates, name, category  = shortest_path(location)\n",
-    "        gpc_locations_by_type(name, category, coordinates)\n",
-    "    generate_main()\n"
+    "    create_reused_combos()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 52,
+   "id": "328a7b05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for location in locations[:]:\n",
+    "#     coordinates, name, category  = shortest_path(location)\n",
+    "#     gpc_locations_by_type(name, category, coordinates)\n",
+    "# generate_main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "id": "e1a464e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "c597c0bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# array_for_export = [[], [], []]\n",
+    "# for location in locations[:]:\n",
+    "#     coordinates, name, category  = shortest_path(location)\n",
+    "#     array_for_export[0].append(name)\n",
+    "#     array_for_export[1].append(category)\n",
+    "#     array_for_export[2].append(coordinates)\n",
+    "# with open(\"location_data.py\", \"w\") as f:\n",
+    "#     f.write(f'''location_data = [\\n''')\n",
+    "#     for array in array_for_export[:-1]:\n",
+    "#         f.write(f'{array},\\n')\n",
+    "#     f.write(f'{array_for_export[-1]}\\n]')"
    ]
   }
  ],
