Separated array functions and exported shortest coordinates to destination

--- a/automatic_script_teleporting/try_again.ipynb
+++ b/automatic_script_teleporting/try_again.ipynb
@@ -9,33 +9,20 @@
    "source": [
     "location_data = [\n",
     "['Centrico Plaza', 'Gare de Lumiose', 'Pokemon Research Lab', 'Hotel Z', 'Racine Construction', 'Restaurant Le Nah', 'Rust Syndicate Office', 'Lumiose Sewers (Canal Access)', 'Quasartico Inc.', 'Lysandre Cafe', 'Lumiose Sewers (Main Access)', 'Hotel Richissime', 'Looker Bureau', 'Lumiose Museum', 'Restaurant Le Yeah', 'Sushi High Roller', 'Restaurant Le Wow', 'Justice Dojo', 'Vert Pokemon Center', 'Bleu Pokemon Center', 'Vernal Pokemon Center', 'Magenta Pokemon Center', 'Magenta Plaza Pokemon Center', 'Rouge Pokemon Center', 'Centrico Pokemon Center', 'Jaune Pokemon Center', 'Hibernal Pokemon Center', 'Cafe Cyclone', 'Cafe Classe', 'Cafe Introversion', 'Nouveau Cafe', 'Cafe Woof', 'Cafe Soleil', 'Shutterbug Cafe', 'Nouveau Cafe Truck No. 2', 'Cafe Pokemon-Amie', 'Cafe Rouleau', 'Cafe Gallant', 'Cafe Triste', 'Nouveau Cafe Truck No. 3', 'Cafe Ultimo', 'Cafe Action', 'Cafe Kizuna', 'Cafe Bataille', 'Wild Zone 1', 'Wild Zone 2', 'Wild Zone 3', 'Wild Zone 4', 'Wild Zone 5', 'Wild Zone 6', 'Wild Zone 7', 'Wild Zone 8', 'Wild Zone 9', 'Wild Zone 10', 'Wild Zone 11', 'Wild Zone 12', 'Wild Zone 13', 'Wild Zone 14', 'Wild Zone 15', 'Wild Zone 16', 'Wild Zone 17', 'Wild Zone 18', 'Wild Zone 19', 'Wild Zone 20'],\n",
-    "['All Locations', 'All Locations', 'All Locations', 'All Locations', 'All Locations', 'All Locations', 'All Locations', 'All Locations', 'All Locations', 'All Locations', 'Facilities', 'Facilities', 'Facilities', 'All Locations', 'All Locations', 'All Locations', 'Facilities', 'Facilities', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones'],\n",
+    "['All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'Facilities', 'Facilities', 'Facilities', 'All travel spots', 'All travel spots', 'All travel spots', 'Facilities', 'Facilities', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones'],\n",
     "[[0, 0], [0, 1], [0, 2], [0, 3], [0, 4], [1, -2], [1, -1], [1, 0], [1, 1], [1, 2], [1, 0], [2, 0], [2, 1], [2, -1], [2, 0], [2, 1], [-1, -1], [-1, 0], [0, 0], [0, 1], [1, 0], [1, 1], [1, 2], [-2, -1], [-2, 0], [-1, -1], [-1, 0], [0, 0], [0, 1], [0, 2], [0, 3], [0, 4], [1, -2], [1, -1], [1, 0], [1, 1], [-2, 0], [2, 0], [2, 1], [2, 2], [-1, -3], [-1, -2], [-1, -1], [-1, 0], [0, 0], [0, 1], [0, 2], [0, 3], [0, 4], [1, -2], [1, -1], [1, 0], [1, 1], [1, 2], [1, 3], [2, -2], [2, -1], [2, 0], [2, 1], [2, 2], [2, 3], [2, 4], [2, 5], [2, 6]]\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ea233ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "]\n",
+    "categories = [\"All travel spots\", \"Facilities\", \"Pokemon Centers\", \"Cafes\", \"Wild Zones\"]\n",
     "locations_in_file = [\n",
-    "[\"All travel spots\"],\n",
-    "[\"Facilities\",\n",
-    "\"Centrico Plaza\", \"Gare de Lumiose\", \"Pokemon Research Lab\", \"Hotel Z\", \"Racine Construction\", \"Restaurant Le Nah\", \"Rust Syndicate Office\",\n",
+    "[\"Centrico Plaza\", \"Gare de Lumiose\", \"Pokemon Research Lab\", \"Hotel Z\", \"Racine Construction\", \"Restaurant Le Nah\", \"Rust Syndicate Office\",\n",
     "\"Lumiose Sewers (Canal Access)\", \"Quasartico Inc.\", \"Lysandre Cafe\", \"Lumiose Sewers (Main Access)\", \"Hotel Richissime\", \"Looker Bureau\", \"Lumiose Museum\",\n",
     "\"Restaurant Le Yeah\", \"Sushi High Roller\", \"Restaurant Le Wow\", \"Justice Dojo\"],\n",
-    "[\"Pokemon Centers\",\n",
-    "\"Vert Pokemon Center\", \"Bleu Pokemon Center\", \"Vernal Pokemon Center\", \"Magenta Pokemon Center\", \"Magenta Plaza Pokemon Center\", \"Rouge Pokemon Center\", \"Centrico Pokemon Center\",\n",
+    "[\"Vert Pokemon Center\", \"Bleu Pokemon Center\", \"Vernal Pokemon Center\", \"Magenta Pokemon Center\", \"Magenta Plaza Pokemon Center\", \"Rouge Pokemon Center\", \"Centrico Pokemon Center\",\n",
     "\"Jaune Pokemon Center\", \"Hibernal Pokemon Center\"],\n",
-    "[\"Cafes\",\n",
-    "\"Cafe Cyclone\", \"Cafe Classe\", \"Cafe Introversion\", \"Nouveau Cafe\", \"Cafe Woof\", \"Cafe Soleil\", \"Shutterbug Cafe\",\n",
+    "[\"Cafe Cyclone\", \"Cafe Classe\", \"Cafe Introversion\", \"Nouveau Cafe\", \"Cafe Woof\", \"Cafe Soleil\", \"Shutterbug Cafe\",\n",
     "\"Nouveau Cafe Truck No. 2\", \"Cafe Pokemon-Amie\", \"Cafe Rouleau\", \"Cafe Gallant\", \"Cafe Triste\", \"Nouveau Cafe Truck No. 3\", \"Cafe Ultimo\",\n",
     "\"Cafe Action\", \"Cafe Kizuna\", \"Cafe Bataille\"],\n",
-    "[\"Wild Zones\",\n",
-    "\"Wild Zone 1\", \"Wild Zone 2\", \"Wild Zone 3\", \"Wild Zone 4\", \"Wild Zone 5\", \"Wild Zone 6\", \"Wild Zone 7\",\n",
+    "[\"Wild Zone 1\", \"Wild Zone 2\", \"Wild Zone 3\", \"Wild Zone 4\", \"Wild Zone 5\", \"Wild Zone 6\", \"Wild Zone 7\",\n",
     "\"Wild Zone 8\", \"Wild Zone 9\", \"Wild Zone 10\", \"Wild Zone 11\", \"Wild Zone 12\", \"Wild Zone 13\", \"Wild Zone 14\",\n",
     "\"Wild Zone 15\", \"Wild Zone 16\", \"Wild Zone 17\", \"Wild Zone 18\", \"Wild Zone 19\", \"Wild Zone 20\"]\n",
     "]"
@@ -44,144 +31,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bba9d1cf",
+   "id": "10f5d085",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_to_single_array():\n",
-    "    output_array = []\n",
-    "    for array in locations_in_file:\n",
-    "        for item in array[1:]:\n",
-    "            output_array.append(item)\n",
-    "    return output_array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d67c527",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_categories():\n",
-    "    new_array = [\"All Locations\"]\n",
-    "    for array in locations_in_file:\n",
-    "        new_array.append(array[0])\n",
-    "    return new_array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "61ec7438",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "category = get_categories()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "e632fd5d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Item: 0\n",
-      "Test category: All Locations\n",
-      "Category index: 0\n",
-      "Category Coordinate: 0\n",
-      "Item: 1\n",
-      "Test category: All Locations\n",
-      "Category index: 0\n",
-      "Category Coordinate: 0\n",
-      "Item: 2\n",
-      "Test category: All Locations\n",
-      "Category index: 0\n",
-      "Category Coordinate: 0\n",
-      "Item: 3\n",
-      "Test category: All Locations\n",
-      "Category index: 0\n",
-      "Category Coordinate: 0\n",
-      "Item: 4\n",
-      "Test category: All Locations\n",
-      "Category index: 0\n",
-      "Category Coordinate: 0\n",
-      "Item: 5\n",
-      "Test category: All Locations\n",
-      "Category index: 0\n",
-      "Category Coordinate: 0\n",
-      "Item: 6\n",
-      "Test category: All Locations\n",
-      "Category index: 0\n",
-      "Category Coordinate: 0\n",
-      "Item: 7\n",
-      "Test category: All Locations\n",
-      "Category index: 0\n",
-      "Category Coordinate: 0\n",
-      "Item: 8\n",
-      "Test category: All Locations\n",
-      "Category index: 0\n",
-      "Category Coordinate: 0\n",
-      "Item: 9\n",
-      "Test category: All Locations\n",
-      "Category index: 0\n",
-      "Category Coordinate: 0\n",
-      "Item: 10\n",
-      "Test category: Facilities\n",
-      "Category index: 1\n",
-      "Category Coordinate: 0\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCategory index:\u001b[39m\u001b[33m\"\u001b[39m, categories.index(test_category))\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCategory Coordinate:\u001b[39m\u001b[33m\"\u001b[39m, full_coordinates[i][\u001b[32m0\u001b[39m])\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m(categories.index(test_category) == full_coordinates[i][\u001b[32m0\u001b[39m])\n",
-      "\u001b[31mAssertionError\u001b[39m: "
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(full_coordinates)):\n",
-    "    test_category = location_data[1][i]\n",
-    "    print(\"Item:\", i)\n",
-    "    print(\"Test category:\", test_category)\n",
-    "    print(\"Category index:\", categories.index(test_category))\n",
-    "    print(\"Category Coordinate:\", full_coordinates[i][0])\n",
-    "    assert(categories.index(test_category) == full_coordinates[i][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41643ccb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def append_coordinates(index):\n",
-    "    for category in location_data[1]:\n",
-    "        j = 0\n",
-    "        while (category == categories[j] and j < 5):\n",
-    "            j += 1\n",
-    "    new_array = []\n",
-    "    new_array.append(j)\n",
-    "    new_array.append(location_data[2][index][0])\n",
-    "    new_array.append(location_data[2][index][1])\n",
-    "    return new_array\n",
-    "\n",
-    "full_coordinates = []\n",
-    "for i in range(len(location_data[0])):\n",
-    "    full_coordinates.append(append_coordinates(i))\n",
-    "\n",
-    "print(full_coordinates)"
+    "each_location = location_data[0]\n",
+    "fastest_categories = location_data[1]\n",
+    "fastest_coordinates = location_data[2]\n",
+    "full_coordinate_array= [[0, 0, 0], [0, 0, 1], [0, 0, 2], [0, 0, 3], [0, 0, 4], [0, 1, -2], [0, 1, -1], [0, 1, 0], [0, 1, 1], [0, 1, 2], [1, 1, 0], [1, 2, 0], [1, 2, 1], [0, 2, -1], [0, 2, 0], [0, 2, 1], [1, -1, -1], [1, -1, 0], [2, 0, 0], [2, 0, 1], [2, 1, 0], [2, 1, 1], [2, 1, 2], [2, -2, -1], [2, -2, 0], [2, -1, -1], [2, -1, 0], [3, 0, 0], [3, 0, 1], [3, 0, 2], [3, 0, 3], [3, 0, 4], [3, 1, -2], [3, 1, -1], [3, 1, 0], [3, 1, 1], [3, -2, 0], [3, 2, 0], [3, 2, 1], [3, 2, 2], [3, -1, -3], [3, -1, -2], [3, -1, -1], [3, -1, 0], [4, 0, 0], [4, 0, 1], [4, 0, 2], [4, 0, 3], [4, 0, 4], [4, 1, -2], [4, 1, -1], [4, 1, 0], [4, 1, 1], [4, 1, 2], [4, 1, 3], [4, 2, -2], [4, 2, -1], [4, 2, 0], [4, 2, 1], [4, 2, 2], [4, 2, 3], [4, 2, 4], [4, 2, 5], [4, 2, 6]]"
    ]
   }
  ],
