Moved around variables and functions for code readability

--- a/automatic_script_teleporting/try_again.ipynb
+++ b/automatic_script_teleporting/try_again.ipynb
@@ -2,43 +2,142 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "8af0c8cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "location_data = [\n",
-    "['Centrico Plaza', 'Gare de Lumiose', 'Pokemon Research Lab', 'Hotel Z', 'Racine Construction', 'Restaurant Le Nah', 'Rust Syndicate Office', 'Lumiose Sewers (Canal Access)', 'Quasartico Inc.', 'Lysandre Cafe', 'Lumiose Sewers (Main Access)', 'Hotel Richissime', 'Looker Bureau', 'Lumiose Museum', 'Restaurant Le Yeah', 'Sushi High Roller', 'Restaurant Le Wow', 'Justice Dojo', 'Vert Pokemon Center', 'Bleu Pokemon Center', 'Vernal Pokemon Center', 'Magenta Pokemon Center', 'Magenta Plaza Pokemon Center', 'Rouge Pokemon Center', 'Centrico Pokemon Center', 'Jaune Pokemon Center', 'Hibernal Pokemon Center', 'Cafe Cyclone', 'Cafe Classe', 'Cafe Introversion', 'Nouveau Cafe', 'Cafe Woof', 'Cafe Soleil', 'Shutterbug Cafe', 'Nouveau Cafe Truck No. 2', 'Cafe Pokemon-Amie', 'Cafe Rouleau', 'Cafe Gallant', 'Cafe Triste', 'Nouveau Cafe Truck No. 3', 'Cafe Ultimo', 'Cafe Action', 'Cafe Kizuna', 'Cafe Bataille', 'Wild Zone 1', 'Wild Zone 2', 'Wild Zone 3', 'Wild Zone 4', 'Wild Zone 5', 'Wild Zone 6', 'Wild Zone 7', 'Wild Zone 8', 'Wild Zone 9', 'Wild Zone 10', 'Wild Zone 11', 'Wild Zone 12', 'Wild Zone 13', 'Wild Zone 14', 'Wild Zone 15', 'Wild Zone 16', 'Wild Zone 17', 'Wild Zone 18', 'Wild Zone 19', 'Wild Zone 20'],\n",
-    "['All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'All travel spots', 'Facilities', 'Facilities', 'Facilities', 'All travel spots', 'All travel spots', 'All travel spots', 'Facilities', 'Facilities', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Pokemon Centers', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Cafes', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones', 'Wild Zones'],\n",
-    "[[0, 0], [0, 1], [0, 2], [0, 3], [0, 4], [1, -2], [1, -1], [1, 0], [1, 1], [1, 2], [1, 0], [2, 0], [2, 1], [2, -1], [2, 0], [2, 1], [-1, -1], [-1, 0], [0, 0], [0, 1], [1, 0], [1, 1], [1, 2], [-2, -1], [-2, 0], [-1, -1], [-1, 0], [0, 0], [0, 1], [0, 2], [0, 3], [0, 4], [1, -2], [1, -1], [1, 0], [1, 1], [-2, 0], [2, 0], [2, 1], [2, 2], [-1, -3], [-1, -2], [-1, -1], [-1, 0], [0, 0], [0, 1], [0, 2], [0, 3], [0, 4], [1, -2], [1, -1], [1, 0], [1, 1], [1, 2], [1, 3], [2, -2], [2, -1], [2, 0], [2, 1], [2, 2], [2, 3], [2, 4], [2, 5], [2, 6]]\n",
-    "]\n",
-    "categories = [\"All travel spots\", \"Facilities\", \"Pokemon Centers\", \"Cafes\", \"Wild Zones\"]\n",
-    "locations_in_file = [\n",
-    "[\"Centrico Plaza\", \"Gare de Lumiose\", \"Pokemon Research Lab\", \"Hotel Z\", \"Racine Construction\", \"Restaurant Le Nah\", \"Rust Syndicate Office\",\n",
-    "\"Lumiose Sewers (Canal Access)\", \"Quasartico Inc.\", \"Lysandre Cafe\", \"Lumiose Sewers (Main Access)\", \"Hotel Richissime\", \"Looker Bureau\", \"Lumiose Museum\",\n",
-    "\"Restaurant Le Yeah\", \"Sushi High Roller\", \"Restaurant Le Wow\", \"Justice Dojo\"],\n",
-    "[\"Vert Pokemon Center\", \"Bleu Pokemon Center\", \"Vernal Pokemon Center\", \"Magenta Pokemon Center\", \"Magenta Plaza Pokemon Center\", \"Rouge Pokemon Center\", \"Centrico Pokemon Center\",\n",
-    "\"Jaune Pokemon Center\", \"Hibernal Pokemon Center\"],\n",
-    "[\"Cafe Cyclone\", \"Cafe Classe\", \"Cafe Introversion\", \"Nouveau Cafe\", \"Cafe Woof\", \"Cafe Soleil\", \"Shutterbug Cafe\",\n",
-    "\"Nouveau Cafe Truck No. 2\", \"Cafe Pokemon-Amie\", \"Cafe Rouleau\", \"Cafe Gallant\", \"Cafe Triste\", \"Nouveau Cafe Truck No. 3\", \"Cafe Ultimo\",\n",
-    "\"Cafe Action\", \"Cafe Kizuna\", \"Cafe Bataille\"],\n",
-    "[\"Wild Zone 1\", \"Wild Zone 2\", \"Wild Zone 3\", \"Wild Zone 4\", \"Wild Zone 5\", \"Wild Zone 6\", \"Wild Zone 7\",\n",
-    "\"Wild Zone 8\", \"Wild Zone 9\", \"Wild Zone 10\", \"Wild Zone 11\", \"Wild Zone 12\", \"Wild Zone 13\", \"Wild Zone 14\",\n",
-    "\"Wild Zone 15\", \"Wild Zone 16\", \"Wild Zone 17\", \"Wild Zone 18\", \"Wild Zone 19\", \"Wild Zone 20\"]\n",
-    "]"
+    "from array_variables import location_data, categories, locations_in_file, each_location, fastest_categories, fastest_coordinates, full_coordinate_array\n",
+    "from reuseable_gpc_variables import dr, dl, du, dd, plus, min, ab, yb, bb, xb, zr, zl, rb, lb, tab, get_val, set_val, wait, combo_stop, combo_run, set_led, prnt, event_press\n",
+    "from reusable_gpc_functions import string_to_variable, function_firstline, end_block, write_command"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "10f5d085",
+   "execution_count": 29,
+   "id": "7c097514",
    "metadata": {},
    "outputs": [],
    "source": [
-    "each_location = location_data[0]\n",
-    "fastest_categories = location_data[1]\n",
-    "fastest_coordinates = location_data[2]\n",
-    "full_coordinate_array= [[0, 0, 0], [0, 0, 1], [0, 0, 2], [0, 0, 3], [0, 0, 4], [0, 1, -2], [0, 1, -1], [0, 1, 0], [0, 1, 1], [0, 1, 2], [1, 1, 0], [1, 2, 0], [1, 2, 1], [0, 2, -1], [0, 2, 0], [0, 2, 1], [1, -1, -1], [1, -1, 0], [2, 0, 0], [2, 0, 1], [2, 1, 0], [2, 1, 1], [2, 1, 2], [2, -2, -1], [2, -2, 0], [2, -1, -1], [2, -1, 0], [3, 0, 0], [3, 0, 1], [3, 0, 2], [3, 0, 3], [3, 0, 4], [3, 1, -2], [3, 1, -1], [3, 1, 0], [3, 1, 1], [3, -2, 0], [3, 2, 0], [3, 2, 1], [3, 2, 2], [3, -1, -3], [3, -1, -2], [3, -1, -1], [3, -1, 0], [4, 0, 0], [4, 0, 1], [4, 0, 2], [4, 0, 3], [4, 0, 4], [4, 1, -2], [4, 1, -1], [4, 1, 0], [4, 1, 1], [4, 1, 2], [4, 1, 3], [4, 2, -2], [4, 2, -1], [4, 2, 0], [4, 2, 1], [4, 2, 2], [4, 2, 3], [4, 2, 4], [4, 2, 5], [4, 2, 6]]"
+    "file = open(\"auto_teleport_loop.gpc\", \"w\")\n",
+    "\n",
+    "wait_time = [100]\n",
+    "\n",
+    "category = 0\n",
+    "\n",
+    "location = 0\n",
+    "\n",
+    "program_name = r\"Menu Fast Travel\\nAll Locations\"\n",
+    "\n",
+    "instruction_page = r\"Set Destination\\nCategory: UP/DOWN\\nLocation: Left/Right\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "330d7e54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def declare_variable(type, name, value):\n",
+    "    file.write(f\"{type} {name} = {value};\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6d3a0499",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def declare_array(array, array_string = ''):\n",
+    "    array_string += r'{'\n",
+    "    for item in array[:-1]:\n",
+    "        array_string += f'{item},'\n",
+    "    array_string += f'{array[-1]}' + r'}'\n",
+    "    return array_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "df30ca5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def declare_string(var_name, target_string):\n",
+    "    variable_name = string_to_variable(var_name)\n",
+    "    file.write(f'const string {variable_name} = \"{target_string}\";\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "eac42190",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def declare_strings_from_array(string_array):\n",
+    "    for item in string_array:\n",
+    "        declare_string(item, item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d66178c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_selections():\n",
+    "    num_tabs = 1\n",
+    "    file.write(\"function get_destination()\" + r'{' + '\\n')\n",
+    "    function_firstline('(get_val(SWI_ZL))', 'if', num_tabs=num_tabs, file=file)\n",
+    "    num_tabs += 1\n",
+    "    function_firstline(f\"(event_press({dd}))\", 'if', num_tabs=num_tabs, file=file)\n",
+    "    num_tabs += 1\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a8d7f271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_variables():\n",
+    "    declare_variable(\"int\", \"SCRIPT_RUNNING\", \"FALSE\")\n",
+    "    declare_variable(\"int\", \"category\", \"0\")\n",
+    "    declare_variable(\"int\", \"location\", \"0\")\n",
+    "    file.write(f\"const int full_coordinate_array[][] =\" + r'{')\n",
+    "    for coordinate_set in full_coordinate_array[:-1]:\n",
+    "        coordinate_string = declare_array(coordinate_set)\n",
+    "        file.write(coordinate_string + r', ')\n",
+    "    file.write(f'{declare_array(full_coordinate_array[-1])}' + r'};' + '\\n')\n",
+    "    declare_string(\"instruction page\", instruction_page)\n",
+    "    declare_strings_from_array(each_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3390d39e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is called (get_val(SWI_ZL)) if 1 1\n",
+      "Is called (event_press(SWI_DOWN)) if 1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "initialize_variables()\n",
+    "write_selections()"
    ]
   }
  ],
