--- a/automatic_script_teleporting/try_again.ipynb
+++ b/automatic_script_teleporting/try_again.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 793,
+   "execution_count": 85,
    "id": "8af0c8cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "from array_variables import location_data, categories, locations_in_file, each_location, fastest_categories, fastest_coordinates, full_coordinate_array, num_per_category\n",
-    "from reuseable_gpc_variables import dr, dl, du, dd, plus, min, ab, yb, bb, xb, zr, zl, rb, lb, tab, get_val, set_val, wait, combo_stop, combo_run, set_led, prnt, event_press\n",
-    "from reusable_gpc_functions import string_to_variable, function_firstline, end_block, write_command, generate_if, generate_else"
+    "from files_pre_conversion.reuseable_gpc_variables import dr, dl, du, dd, plus, min, ab, yb, bb, xb, zr, zl, rb, lb, tab, get_val, set_val, wait, combo_stop, combo_run, set_led, prnt, event_press\n",
+    "from files_pre_conversion.reusable_gpc_functions import string_to_variable, function_firstline, end_block, write_command, generate_if, generate_else"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 794,
+   "execution_count": 106,
    "id": "7c097514",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 795,
+   "execution_count": 107,
    "id": "0eab21bb",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 796,
+   "execution_count": 108,
    "id": "99d0d7a9",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 797,
+   "execution_count": 109,
    "id": "330d7e54",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 798,
+   "execution_count": 110,
    "id": "6d3a0499",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 799,
+   "execution_count": 111,
    "id": "df30ca5c",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 800,
+   "execution_count": 112,
    "id": "eac42190",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 801,
+   "execution_count": 113,
    "id": "7bb7dfc2",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 802,
+   "execution_count": 114,
    "id": "cefa3c13",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 803,
+   "execution_count": 115,
    "id": "92bdcf4c",
    "metadata": {},
    "outputs": [],
@@ -144,12 +144,13 @@
     "def generate_if_reassignment(variable_name, comparison, value_assigned, num_tabs):\n",
     "    generate_if(f'{variable_name} {comparison}', num_tabs, file)\n",
     "    assign_variable(variable_name, value_assigned, num_tabs + 1)\n",
+    "    write_command(wait, [100], num_tabs + 1, file)\n",
     "    end_block(num_tabs, file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 804,
+   "execution_count": 116,
    "id": "d66178c6",
    "metadata": {},
    "outputs": [],
@@ -177,42 +178,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "ecab788c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_print(name, num_tabs, file):\n",
     "    # write_command(x_value, y_value, font, color, string_address)\n",
-    "    write_command(print, [20, 20, \"OLED_FONT_MEDIUM\", \"OLED_WHITE\", name], num_tabs, file)"
+    "    write_command(\"print\", [20, 20, \"OLED_FONT_MEDIUM\", \"OLED_WHITE\", name], num_tabs, file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
+   "id": "5eebffff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_coordinate_position(i, num_tabs, file):\n",
+    "    assign_variable(\"coordinate_position\", i, num_tabs)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "1f1b411f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_coordinates(i, array, num_tabs, file):\n",
+    "    file.write('function set_coordinates()' + r\"{\" + \"\\n\")\n",
+    "    num_tabs += 1\n",
+    "    assign_variable(\"category_coordinate\", f\"{array}[{i}][0]\", num_tabs)\n",
+    "    assign_variable(\"x_coordinate\", f\"{array}[{i}][1]\", num_tabs)\n",
+    "    assign_variable(\"y_coordinate\", f\"{array}[{i}][2]\", num_tabs)\n",
+    "    end_block(num_tabs - 1, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "78501f33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def assignment_string(name, value):\n",
+    "    string = f'{name} = {value};\\n'\n",
+    "    return string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "0b6c7f8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_statement_array(statement_array, num_tabs):\n",
+    "    for item in statement_array:\n",
+    "        new_string += f'{num_tabs * '\\t'}{item}'\n",
+    "        new_string += '\\t}\\n'\n",
+    "    return new_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "57b108c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_function_string(name, statement_array, arguments=''):\n",
+    "    new_string = f'function {name}({arguments})' + r'{' + '\\n'\n",
+    "\n",
+    "    return new_string\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "id": "2c3e2ff9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def display_selection():\n",
+    "def display_selection(num_tabs, file):\n",
+    "    file.write('function display_selection()' + r'{' + '\\n')\n",
+    "    tab = '\\t'\n",
     "    category = 1\n",
-    "    location = 0\n",
+    "    location_num = 0\n",
     "    for i, location in enumerate(each_location):\n",
     "        category_index = category - 1\n",
-    "        if num_per_category[category_index] < location:\n",
+    "        if num_per_category[category_index] < location_num:\n",
     "            category += 1\n",
-    "            location = 0\n",
+    "            location_num = 0\n",
+    "        else:\n",
+    "            location_num += 1\n",
     "        location_variable = string_to_variable(location)\n",
-    "        category_coordinate = fastest_coordinates[i][0]\n",
-    "        x_coordinate = fastest_coordinates[i][1]\n",
-    "        y_coordinate = fastest_coordinates[i][2]\n",
-    "        file.write(f'if (category == {category} and location == {location}' + r'{' + '\\n')\n",
-    "        generate_print(location_variable, num_tabs, file)\n"
+    "        file.write(f'{tab * num_tabs}if (category == {category} & location == {location_num})' + r'{' + '\\n')\n",
+    "        set_coordinate_position(i, num_tabs + 1, file)\n",
+    "        generate_print(location_variable, num_tabs + 1, file)\n",
+    "        end_block(num_tabs, file)\n",
+    "    end_block(num_tabs - 1, file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 806,
+   "execution_count": 124,
    "id": "a8d7f271",
    "metadata": {},
    "outputs": [],
@@ -224,6 +296,7 @@
     "    declare_variable('int', 'category_coordinate', 0)\n",
     "    declare_variable('int', 'x_coordinate', 0)\n",
     "    declare_variable('int', 'y_coordinate', 0)\n",
+    "    declare_variable('int', 'coordinate_position', 0)\n",
     "    declare_variable(\"const string\", \"location_name_in_use\", '\"\"')\n",
     "    file.write(declare_array(num_per_category, \"const int num_per_category[] = \"))\n",
     "    file.write(';\\n')\n",
@@ -233,35 +306,20 @@
     "        file.write(coordinate_string + r', ')\n",
     "    file.write(f'{declare_array(full_coordinate_array[-1])}' + r'};' + '\\n')\n",
     "    declare_string(\"instruction page\", instruction_page)\n",
-    "    declare_strings_from_array(each_location)"
+    "    declare_strings_from_array(each_location)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 807,
+   "execution_count": 125,
    "id": "3390d39e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Is called (get_val(SWI_ZL)) if 1 1\n",
-      "Is called ((event_press(SWI_DOWN))) if 1 3\n",
-      "Is called ((event_press(SWI_UP))) if 1 3\n",
-      "Is called ((event_press(SWI_LEFT))) if 1 3\n",
-      "Is called ((event_press(SWI_RIGHT))) if 1 3\n",
-      "Is called (category < 0) if 1 3\n",
-      "Is called (category > 4) if 1 3\n",
-      "Is called (location < 0) if 1 3\n",
-      "Is called (location > num_per_category[category - 1]) if 1 3\n",
-      "Is called (event_press(SWI_R)) if 1 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "initialize_variables()\n",
-    "write_selections()"
+    "write_selections()\n",
+    "display_selection(num_tabs, file)\n",
+    "set_coordinates('coordinate_position', 'full_coordinate_array', 0, file)"
    ]
   }
  ],
